# generalizedplanck

./: .gitignore  README.md  pyproject.toml
.virtual_documents/examples/: basic_example.ipynb
doc/: timing_code.py
examples/: basic_example.ipynb  basic_example.py
generalizedplanck/: __init__.py
generalizedplanck/components/: __init__.py  generalized_planck.py  ideal_sqrt_absorption.py  lorentzianhf.py  reflectance.py  urbach_tail.py
generalizedplanck/data/: __init__.py  gaas_cl.txt  sample_data.py
generalizedplanck/utils/: __init__.py  useful_stuff.py
