[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generalizedplanck"
description = ""
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = {file = 'LICENSE'}
dependencies = [
"refractiveindex>=0.0.5",
"dask>=2024.9.1",
"hyperspy>=2.2.0",
"matplotlib>=3.9.2",
"numpy>=2.0.2",
"scipy>=1.14.1",
"uncertainties>=3.2.2"
]
